[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rsoxs"
authors = [
    {name = "Charles Titus", email = "ctitus@bnl.gov"},
    {name = "Priyanka Ketkar", email = "pketkar@bnl.gov"},
    {name = "Eliot Gann", email = "egann@bnl.gov"},
]
description = "RSoXS Beamline Framework"
dynamic = ["version"]
dependencies = [
  "bluesky",
  "nbs-bl",
  "sst_base",
  "bluesky-darkframes",
  "slackclient",
]

requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/NSLS-II-SST/rsoxs"

[tool.hatch.version]
source = "vcs"

[project.entry-points."nbs_gui.plans"]
rsoxs-custom-scan = "rsoxs.qt.plans.rsoxsCustom:RSoXSCustomWidget"
rsoxs-scan = "rsoxs.qt.plans.rsoxsPlan:RSoXSPlanWidget"

[project.entry-points."nbs_gui.plans.beamlineModifier"]
rsoxs-configuration = "rsoxs.qt.plans.rsoxsSetup:RSoXSBeamlineSetupParams"

[project.entry-points."nbs_gui.plan_loaders"]
rsoxs-gui-loader = "rsoxs.qt.plans.rsoxs_plan_loader:RSoXSPlanLoader"

[project.entry-points."nbs_bl.plan_loaders"]
rsoxs = "rsoxs.plans.rsoxs:load_rsoxs"

[project.entry-points."nbs_bl.plan_decorators"]
rsoxs_waxs = "rsoxs.plans.scan_decorators:rsoxs_waxs_decorator"

[project.entry-points."nbs_viewer.plot_displays"]
rsoxs-spiral = "rsoxs.qt.viewer.pyqtGraphSpiral:PyQtGraphSpiral"

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
